Site: - Fixed CSS on mobile for artwork thumbnail titles being too big and getting cut off
Rss updated for next update

--- a/src/css/filterByTag.css
+++ b/src/css/filterByTag.css
@@ -83,6 +83,13 @@
     }
 }
 
+/* Reduce artwork thumbnail title font size on mobile */
+@media only screen and (max-width: 720px) {
+    .content .desc {
+      font-size: small;
+    }
+  }
+
 .spoilers {
     a {
         font-weight: 600;
